--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "actionhero": "16.0.0",
     "bluebird": "^3.4.7",
+    "date-utils": "^1.2.21",
     "fakeredis": "latest",
     "ioredis": "latest",
+    "lodash": "^4.17.4",
     "twilio": "^2.11.1",
     "ws": "latest"
   },
