--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "devDependencies": {
     "mocha": "latest",
-    "should": "latest"
+    "should": "latest",
+    "sinon": "^1.17.7"
   },
   "scripts": {
     "start": "actionhero start",
